<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registrar"
            android:textSize="60sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completa_el_formulario"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="8dp"
            >
        </TextView>

        <EditText
            android:id="@+id/etNombres"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:hint="@string/nombre_y_apellido"
            android:inputType="textPersonName"
            android:textSize="20sp"></EditText>
        <EditText
            android:id="@+id/etEMail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/ingresa_tu_correo_electronico"
            android:inputType="textEmailAddress"
            android:textSize="20sp"></EditText>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/ingresa_tu_contasena"
            android:inputType="textPassword"
            android:textSize="20sp"></EditText>
        <EditText
            android:id="@+id/etPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/repetir_contrasena"
            android:inputType="textPassword"
            android:textSize="20sp"></EditText>

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="25dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnGoToConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:onClick="btnGoToConfirmation"
            android:text="@string/registrarse"></Button>

        <Button
            android:id="@+id/tv_go_to_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnDelete"
            android:text="Delete" />

        <TextView
            android:id="@+id/tv_go_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/volver_al_login">

        </TextView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>