<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:text="Actualizar Datos"
            android:textSize="40sp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completa_el_formulario"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="8dp"
            >
        </TextView>

        <EditText
            android:id="@+id/etNombres"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:hint="@string/nombre_y_apellido"
            android:inputType="textPersonName"
            android:textSize="20sp"></EditText>
        <EditText
            android:id="@+id/etEMail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/ingresa_tu_correo_electronico"
            android:inputType="textEmailAddress"
            android:textSize="20sp"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal">

        <Button

            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:onClick="btnActualizar"
            android:text="@string/actualizar"></Button>

        <TextView
            android:id="@+id/tv_go_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/volver_al_login">

        </TextView>
        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="8dp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>